# colmap-wrapper

./: .gitattributes  .gitignore  Readme.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
colmap_wrapper/: __init__.py  camera.py  colmap.py  colmap_project.py  gps.py  test.py  utils.py
colmap_wrapper/colmap/: __init__.py  bin.py  camera.py  colmap.py  colmap_project.py  utils.py
colmap_wrapper/data/: __init__.py  download.py
colmap_wrapper/dataloader/: __init__.py  bin.py  camera.py  loader.py  project.py
colmap_wrapper/gps/: __init__.py  gps.py  registration.py  utils.py  visualization.py
colmap_wrapper/reconstruction/: __init__.py  camera_config.py  recunstruction.py
colmap_wrapper/test/: test.py  test2sides.py  testGPS.py  xys.txt
colmap_wrapper/visualization/: __init__.py  visualization.py  visualization_photogrammetry_software.py
src/colmap/: __init__.py  bin.py  camera.py  colmap.py  gui.py  image.py  utils.py  visualization.py
src/colmap/test/: point3D_ids.txt  pt3did_to_kpidx.json  xys.txt
tests/: test2sides.py
