[project]
name = "colmap-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "matplotlib>=3.10.3",
  "numpy>=2.2.6",
  "open3d>=0.19.0",
  "opencv-contrib-python>=4.11.0.86",
  "pycolmap>=3.11.1",
  "pyexiftool>=0.5.6",
  "pyquaternion==0.9.9",
  "tqdm==4.64.0",
  "wget==3.2",
]

[dependency-groups]
dev = ["pytest>=8.4.0"]
## -*- coding: utf-8 -*-
#"""
#Copyright (c) 2022 Lukas Meyer
#Licensed under the MIT License.
#See LICENSE file for more information.
#"""
#
## Built-in/Generic Imports
#import setuptools
#from os import path
#
#this_directory = path.abspath(path.dirname(__file__))
#with open(path.join(this_directory, 'Readme.md'), encoding='utf-8') as f:
#    long_description = f.read()
#
#setuptools.setup(
#    name='colmap_wrapper',
#    version='1.1.5',
#    description='COLMAP Wrapper',
#    license="MIT",
#    long_description=long_description,
#    long_description_content_type='text/markdown',
#    author='Lukas Meyer',
#    author_email='lukas.meyer@fau.de',
#    url="https://github.com/meyerls/colmap-wrapper",
#    packages=['colmap_wrapper.dataloader',
#              'colmap_wrapper.visualization',
#              'colmap_wrapper.data',
#              'colmap_wrapper.gps',
#              'colmap_wrapper.reconstruction'],
#    install_requires=["numpy",
#                      "pyexiftool",
#                      "open3d",
#                      "pyquaternion",
#                      "matplotlib",
#                      "tqdm",
#                      "wget",
#                      "pycolmap"
#                      ],  # external packages as dependencies
#    classifiers=[
#        'Programming Language :: Python :: 3.8',
#        'Programming Language :: Python :: 3.9',
#        'Programming Language :: Python :: 3.10',
#        "License :: OSI Approved :: MIT License",
#        "Operating System :: OS Independent",
#    ]
#)
